# client-rust

./: Cargo.toml  OWNERS  README.md  update.sh
.github/workflows/: ci.yaml
scripts/: kind.sh
src/: lib.rs
src/apis/: advancedcronjobs.rs  broadcastjobs.rs  containerrecreaterequests.rs  daemonsets.rs  ephemeraljobs.rs  imagepulljobs.rs  mod.rs  nodeimages.rs  resourcedistributions.rs  sidecarsets.rs  statefulsets.rs  uniteddeployments.rs  workloadspreads.rs
