[package]
name = "openkruise"
version = "0.0.1"
edition = "2021"
authors = ["Lan Liang <gcslyp@gmail.com>"]
keywords = ["kubernetes", "openkruise"]
license = "Apache-2.0"
description = "openkruise api"
repository = "https://github.com/openkruise/client-rust"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
kube = { version = "^0.85.0", default-features = false, features = ["derive"] }
k8s-openapi = { version = "0.19.0", features = ["v1_27"]  }
schemars = "0.8.12"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"

[dev-dependencies]
anyhow = "1.0.71"
hyper = "0.14.26"
kube = { version = "^0.85.0" }
k8s-openapi = { version = "0.19.0" , features = ["v1_27"] }
tokio = { version = "1.28.1", features = ["macros"] }
tower = "0.4.13"
uuid = { version = "1.3.3", features = ["v4", "fast-rng"] }
